# plane-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: 03-caching.md  architecture.md  caching.md
docs/adr/: 0001-async-wrapper-over-sync-sdk.md  0002-fuzzy-resource-resolution.md  0003-sdk-escape-hatches.md  0004-disk-cache-ttls-and-keys.md  0005-dual-output-contract.md  0006-secondary-enrichment-degrades-to-null.md
skills/: SKILL.md
skills/references/: command-reference.md
src/planecli/: __init__.py  __main__.py  app.py  cache.py  config.py  exceptions.py  logging.py
src/planecli/api/: async_sdk.py  client.py
src/planecli/commands/: cache_cmd.py  comments.py  cycles.py  documents.py  labels.py  modules.py  projects.py  states.py  users.py  work_items.py
src/planecli/formatters/: __init__.py
src/planecli/utils/: colors.py  fuzzy.py  resolve.py
tests/: conftest.py  test_cache.py  test_config.py  test_fuzzy.py  test_resolve.py  test_retry.py
tests/test_commands/: test_comments.py  test_modules.py  test_work_items.py
